--- a/components/timer/Cargo.toml
+++ b/components/timer/Cargo.toml
@@ -10,7 +10,8 @@ edition = "2018"
 log = "0.4"
 
 bytes = "0.4"
-futures-preview = { version = "0.3.0-alpha.16", features = ["nightly", "async-await"] }
+# futures-preview = "0.3.0-alpha.18"
+futures = "0.3.1"
 
 common = { path = "../common", version = "0.1.0", package = "offst-common" }
 
