--- a/components/common/Cargo.toml
+++ b/components/common/Cargo.toml
@@ -10,7 +10,8 @@ log = "0.4"
 
 
 bytes = "0.4"
-futures-preview = {version = "0.3.0-alpha.16", features = ["compat"] }
+futures = "0.3.1"
+# futures-preview = {version = "0.3.0-alpha.16", features = ["compat"] }
 
 tokio = "0.1"
 
