--- a/components/identity/Cargo.toml
+++ b/components/identity/Cargo.toml
@@ -11,7 +11,7 @@ common = { path = "../common", version = "0.1.0", package = "offst-common" }
 crypto = { path = "../crypto", version = "0.1.0" , package = "offst-crypto"}
 proto = { path = "../proto", version = "0.1.0" , package = "offst-proto"}
 
-futures-preview = "0.3.0-alpha.16"
+futures = "0.3.1"
 
 [dev-dependencies]
 
