--- a/components/database/Cargo.toml
+++ b/components/database/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 common = { path = "../common", version = "0.1.0", package = "offst-common" }
 
 log = "0.4"
-futures-preview = "0.3.0-alpha.16"
+futures = "0.3.1"
 im = "12.0.0"
 
 atomicwrites = "0.2.2"
