--- a/components/version/Cargo.toml
+++ b/components/version/Cargo.toml
@@ -10,6 +10,10 @@ edition = "2018"
 common = { path = "../common", version = "0.1.0", package = "offst-common" }
 
 log = "0.4"
-futures-preview = "0.3.0-alpha.16"
+futures = "0.3.1"
 
 byteorder = "1.1"
+
+[dev-dependencies]
+
+futures = {version = "0.3.1", features = ["thread-pool"]}
