--- a/components/secure_channel/Cargo.toml
+++ b/components/secure_channel/Cargo.toml
@@ -17,8 +17,12 @@ log = "0.4"
 pretty_env_logger = "0.2"
 derive_more = "0.15.0"
 
-futures-preview = "0.3.0-alpha.16"
+futures = "0.3.1"
 
 byteorder = "1.1"
+
+[dev-dependencies]
+
+futures = {version = "0.3.1", features = ["thread-pool"]}
 
 
