--- a/components/keepalive/Cargo.toml
+++ b/components/keepalive/Cargo.toml
@@ -13,5 +13,9 @@ timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
 proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
 
 log = "0.4"
-futures-preview = "0.3.0-alpha.16"
+futures = "0.3.1"
 derive_more = "0.15.0"
+
+[dev-dependencies]
+
+futures = {version = "0.3.1", features = ["thread-pool"]}
