--- a/components/relay/Cargo.toml
+++ b/components/relay/Cargo.toml
@@ -17,6 +17,10 @@ version = { path = "../version", version = "0.1.0" , package = "offst-version" }
 secure-channel = { path = "../secure_channel", version = "0.1.0" , package = "offst-secure-channel" }
 
 log = "0.4"
-futures-preview = "0.3.0-alpha.16"
+futures = "0.3.1"
 
 derive_more = "0.14.0"
+
+[dev-dependencies]
+
+futures = {version = "0.3.1", features = ["thread-pool"]}
