--- a/components/net/Cargo.toml
+++ b/components/net/Cargo.toml
@@ -10,14 +10,8 @@ edition = "2018"
 common = { path = "../common", version = "0.1.0", package = "offst-common" }
 proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
 
-# tokio-io = "0.1"
-# tokio-core = "0.1"
-# tokio-codec = "0.1"
-tokio = "0.1"
-
-# For compatibility layer:
-futures_01 = { version = "0.1", package = "futures" }
-futures-preview = {version = "0.3.0-alpha.16", features = ["compat"] }
+futures = "0.3.1"
+async-std = "1.0.1"
 
 log = "0.4"
 
@@ -26,3 +20,5 @@ bytes = "0.4"
 [dev-dependencies]
 
 env_logger = "0.6.0"
+
+futures = { version = "0.3.1", features = ["thread-pool"] }
