--- a/components/net/Cargo.toml
+++ b/components/net/Cargo.toml
@@ -11,6 +11,7 @@ common = { path = "../common", version = "0.1.0", package = "offst-common" }
 proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
 
 futures = "0.3.1"
+futures_codec = "0.3.1"
 async-std = "1.0.1"
 
 log = "0.4"
