--- a/components/app/Cargo.toml
+++ b/components/app/Cargo.toml
@@ -21,5 +21,10 @@ version = { path = "../version", version="0.1.0", package = "offst-version" }
 
 log = "0.4"
 simple_logger = "1.0.1"
-futures-preview = "0.3.0-alpha.16"
+
+futures = "0.3.1"
 derive_more = "0.14.0"
+
+[dev-dependencies]
+
+futures = {version = "0.3.1", features = ["thread-pool"]}
