--- a/components/node/Cargo.toml
+++ b/components/node/Cargo.toml
@@ -26,7 +26,7 @@ net = { path = "../net", version = "0.1.0" , package = "offst-net" }
 
 
 log = "0.4"
-futures-preview = "0.3.0-alpha.16"
+futures = "0.3.1"
 serde = {version = "1.0.87", features = ["derive"]}
 
 derive_more = "0.14.0"
