--- a/components/bin/Cargo.toml
+++ b/components/bin/Cargo.toml
@@ -45,7 +45,7 @@ base64 = "0.10.1"
 
 log = "0.4"
 env_logger = "0.6.0"
-futures-preview = "0.3.0-alpha.16"
+futures = {version = "0.3.1", features = ["thread-pool"]}
 
 structopt = "0.2.15"
 
