--- a/components/stcompact/Cargo.toml
+++ b/components/stcompact/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/lib.rs"
 
 common = { path = "../common", version = "0.1.0", package = "offst-common" }
 proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
+database = { path = "../database", version = "0.1.0", package = "offst-database" }
 node = { path = "../node", version = "0.1.0" , package = "offst-node" }
 
 app = { path = "../app", version = "0.1.0", package = "offst-app" }
