offst-lockfile: Initial implementation. Not tested yet.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,5 @@ members = [
   "components/capnp_conv/capnp_conv_derive",
   "components/signature",
   "components/route",
+  "components/lockfile",
 ]
