--- a/components/lockfile/Cargo.toml
+++ b/components/lockfile/Cargo.toml
@@ -15,6 +15,7 @@ async-std = {version = "1.2.0", features=["unstable"]}
 chrono = "0.4.10"
 
 byteorder = "1.1"
+cluFlock = "1.2.5"
 
 [dev-dependencies]
 
