--- a/components/stcompact/Cargo.toml
+++ b/components/stcompact/Cargo.toml
@@ -23,7 +23,6 @@ database = { path = "../database", version = "0.1.0", package = "offst-database"
 node = { path = "../node", version = "0.1.0" , package = "offst-node" }
 app = { path = "../app", version = "0.1.0", package = "offst-app" }
 
-toml = "0.4.10"
 serde = {version = "1.0.87", features = ["derive"]}
 base64 = "0.10.1"
 
@@ -35,6 +34,7 @@ async-std = "1.2.0"
 structopt = "0.2.15"
 
 derive_more = "0.14.0"
+serde_json = "1.0.44"
 
 [dev-dependencies]
 
