--- a/components/bin/Cargo.toml
+++ b/components/bin/Cargo.toml
@@ -46,10 +46,11 @@ base64 = "0.10.1"
 log = "0.4"
 env_logger = "0.6.0"
 futures = {version = "0.3.1", features = ["thread-pool"]}
+async-std = "1.2.0"
 
 structopt = "0.2.15"
 
-derive_more = "0.14.0"
+derive_more = "0.99.2"
 
 [dev-dependencies]
 
