--- a/components/stcompact/Cargo.toml
+++ b/components/stcompact/Cargo.toml
@@ -25,6 +25,7 @@ database = { path = "../database", version = "0.1.0", package = "offst-database"
 identity = { path = "../identity", version = "0.1.0", package = "offst-identity" }
 node = { path = "../node", version = "0.1.0" , package = "offst-node" }
 net = { path = "../net", version = "0.1.0", package = "offst-net" }
+version = { path = "../version", version = "0.1.0", package = "offst-version" }
 app = { path = "../app", version = "0.1.0", package = "offst-app" }
 
 serde = {version = "1.0.87", features = ["derive"]}
