Refactor: Split connection logic into a few separate crates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,6 @@ members = [
   "components/signature",
   "components/route",
   "components/lockfile",
+  "components/connection",
+  "components/app_conn",
 ]
