--- a/components/app_client/Cargo.toml
+++ b/components/app_client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-app-conn"
+name = "offst-app-client"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
