--- a/components/stcompact/Cargo.toml
+++ b/components/stcompact/Cargo.toml
@@ -43,6 +43,12 @@ structopt = "0.2.15"
 derive_more = "0.99.2"
 serde_json = "1.0.44"
 
+# Quickcheck:
+quickcheck = {version = "0.8"}
+quickcheck_macros = {version = "0.8"}
+quickcheck_derive = {version = "0.2.1"}
+rand = {version = "0.7.2"}
+
 [dev-dependencies]
 
 tempfile = "3.0.5"
