--- a/components/crypto/Cargo.toml
+++ b/components/crypto/Cargo.toml
@@ -10,7 +10,6 @@ edition = "2018"
 common = { path = "../common", version = "0.1.0", package = "offst-common" }
 proto = { path = "../proto", version = "0.1.0", package = "offst-proto" }
 
-rand = "0.5"
 # ring = "=0.13.0-alpha"
 ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.13.0-alpha4" }
 untrusted = "0.6"
@@ -20,6 +19,11 @@ bytes = "0.4"
 base64 = "0.9"
 
 derive_more = "0.14.0"
+
+# Quickcheck:
+quickcheck = {version = "0.8"}
+quickcheck_derive = {version = "0.2.1"}
+rand = {version = "0.7.2"}
 
 [dependencies.byteorder]
 version = "1.1"
