--- a/components/funder/Cargo.toml
+++ b/components/funder/Cargo.toml
@@ -27,6 +27,12 @@ serde = {version = "1.0.104", features = ["derive"]}
 im = {version = "13.0.0", features = ["serde"]}
 byteorder = {version = "1.1", features = ["i128"]}
 
+# Quickcheck:
+quickcheck = {version = "0.9"}
+quickcheck_macros = {version = "0.8"}
+quickcheck_derive = {version = "0.2.1"}
+rand = {version = "0.7.2"}
+
 [dev-dependencies]
 
 futures = {version = "0.3.1", features = ["thread-pool"]}
