--- a/components/proto/Cargo.toml
+++ b/components/proto/Cargo.toml
@@ -23,7 +23,7 @@ bytes = "0.4"
 toml = "0.4.10"
 base64 = "0.10.1"
 
-im = {version = "12.0.0", features = ["serde"]}
+im = {version = "14.1.0", features = ["serde", "quickcheck"]}
 
 derive_more = "0.14.0"
 
