--- a/components/test/Cargo.toml
+++ b/components/test/Cargo.toml
@@ -37,5 +37,6 @@ serde_json = "1.0.44"
 # Quickcheck:
 quickcheck = {version = "0.9"}
 quickcheck_macros = {version = "0.8"}
+rand = {version = "0.7.2"}
 
 futures = {version = "0.3.1", features = ["thread-pool"]}
