--- a/components/proto/Cargo.toml
+++ b/components/proto/Cargo.toml
@@ -18,9 +18,9 @@ byteorder = "1.1"
 
 serde = { version = "1.0.104", features = ["derive"] }
 
-serde_json = "1.0.27"
+serde_json = "1.0.44"
 bytes = "0.4"
-toml = "0.4.10"
+# toml = "0.4.10"
 base64 = "0.10.1"
 
 im = {version = "14.1.0", features = ["serde", "quickcheck"]}
