offst-database: Serialization now done using serde_json (Instead of bincode).

--- a/components/database/Cargo.toml
+++ b/components/database/Cargo.toml
@@ -18,7 +18,8 @@ atomicwrites = "0.2.2"
 serde = {version = "1.0.104", features = ["derive"]}
 
 base64 = "0.9"
-bincode = "1.1.2"
+# bincode = "1.1.2"
+serde_json = "1.0.44"
 
 [dev-dependencies]
 
