--- a/components/proto/Cargo.toml
+++ b/components/proto/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 
 common = { path = "../common", version = "0.1.0", package = "offst-common" }
-mutual_from = { path = "../mutual_from", version = "0.1.0", package = "offst-mutual-from" }
+offst-mutual-from = { path = "../mutual_from", version = "0.1.0"}
 capnp_conv = { path = "../capnp_conv", version = "0.1.0", package = "offst-capnp-conv" }
 
 capnp = "0.10.0"
