--- a/components/capnp_conv/Cargo.toml
+++ b/components/capnp_conv/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-capnp-conv"
+name = "offset-capnp-conv"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
@@ -10,7 +10,7 @@ edition = "2018"
 log = "0.4"
 pretty_env_logger = "0.2"
 
-offst-capnp-conv-derive = { path = "capnp_conv_derive", version = "0.1.0" }
+offset-capnp-conv-derive = { path = "capnp_conv_derive", version = "0.1.0" }
 
 capnp = "0.10.0"
 derive_more = "0.15.0"
