--- a/components/identity/Cargo.toml
+++ b/components/identity/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-identity"
+name = "offset-identity"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
@@ -7,9 +7,9 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
-crypto = { path = "../crypto", version = "0.1.0" , package = "offst-crypto"}
-proto = { path = "../proto", version = "0.1.0" , package = "offst-proto"}
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
+crypto = { path = "../crypto", version = "0.1.0" , package = "offset-crypto"}
+proto = { path = "../proto", version = "0.1.0" , package = "offset-proto"}
 
 futures = "0.3.1"
 
