--- a/components/app/Cargo.toml
+++ b/components/app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-app"
+name = "offset-app"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
@@ -7,15 +7,15 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
-crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
-identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
-timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
-proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
-signature = { path = "../signature", version = "0.1.0" , package = "offst-signature" }
-net = { path = "../net", version = "0.1.0" , package = "offst-net" }
-app_client = { path = "../app_client", version = "0.1.0" , package = "offst-app-client" }
-connection = { path = "../connection", version = "0.1.0" , package = "offst-connection" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
+crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
+identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
+timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
+proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
+signature = { path = "../signature", version = "0.1.0" , package = "offset-signature" }
+net = { path = "../net", version = "0.1.0" , package = "offset-net" }
+app_client = { path = "../app_client", version = "0.1.0" , package = "offset-app-client" }
+connection = { path = "../connection", version = "0.1.0" , package = "offset-connection" }
 
 log = "0.4"
 simple_logger = "1.0.1"
