--- a/components/capnp_conv/capnp_conv_derive/Cargo.toml
+++ b/components/capnp_conv/capnp_conv_derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-capnp-conv-derive"
+name = "offset-capnp-conv-derive"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
