--- a/components/common/Cargo.toml
+++ b/components/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-common"
+name = "offset-common"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
