--- a/components/connection/Cargo.toml
+++ b/components/connection/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-connection"
+name = "offset-connection"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
@@ -7,16 +7,16 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
-crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
-identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
-timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
-proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
-signature = { path = "../signature", version = "0.1.0" , package = "offst-signature" }
-net = { path = "../net", version = "0.1.0" , package = "offst-net" }
-keepalive = { path = "../keepalive", version="0.1.0", package = "offst-keepalive" }
-secure_channel = { path = "../secure_channel", version="0.1.0", package = "offst-secure-channel" }
-version = { path = "../version", version="0.1.0", package = "offst-version" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
+crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
+identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
+timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
+proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
+signature = { path = "../signature", version = "0.1.0" , package = "offset-signature" }
+net = { path = "../net", version = "0.1.0" , package = "offset-net" }
+keepalive = { path = "../keepalive", version="0.1.0", package = "offset-keepalive" }
+secure_channel = { path = "../secure_channel", version="0.1.0", package = "offset-secure-channel" }
+version = { path = "../version", version="0.1.0", package = "offset-version" }
 
 
 log = "0.4"
