--- a/components/crypto/Cargo.toml
+++ b/components/crypto/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-crypto"
+name = "offset-crypto"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
@@ -7,8 +7,8 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
-proto = { path = "../proto", version = "0.1.0", package = "offst-proto" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
+proto = { path = "../proto", version = "0.1.0", package = "offset-proto" }
 
 # ring = "=0.13.0-alpha"
 ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.13.0-alpha4" }
