--- a/components/database/Cargo.toml
+++ b/components/database/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-database"
+name = "offset-database"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "AGPL-3.0"
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
 
 log = "0.4"
 futures = "0.3.1"
