--- a/components/funder/Cargo.toml
+++ b/components/funder/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-funder"
+name = "offset-funder"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "AGPL-3.0"
@@ -8,12 +8,12 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
-crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto"}
-identity = { path = "../identity", version = "0.1.0", package = "offst-identity" }
-proto = { path = "../proto", version = "0.1.0", package = "offst-proto" }
-signature = { path = "../signature", version = "0.1.0", package = "offst-signature" }
-database = { path = "../database", version = "0.1.0", package = "offst-database" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
+crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto"}
+identity = { path = "../identity", version = "0.1.0", package = "offset-identity" }
+proto = { path = "../proto", version = "0.1.0", package = "offset-proto" }
+signature = { path = "../signature", version = "0.1.0", package = "offset-signature" }
+database = { path = "../database", version = "0.1.0", package = "offset-database" }
 
 log = "0.4"
 pretty_env_logger = "0.2"
