--- a/components/index_server/Cargo.toml
+++ b/components/index_server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-index-server"
+name = "offset-index-server"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "AGPL-3.0"
@@ -7,12 +7,12 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
-crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
-identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
-timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
-proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
-signature = { path = "../signature", version = "0.1.0" , package = "offst-signature" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
+crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
+identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
+timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
+proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
+signature = { path = "../signature", version = "0.1.0" , package = "offset-signature" }
 
 log = "0.4"
 # TODO: How to make sure this is only imported in tests?
