--- a/components/mutual_from/Cargo.toml
+++ b/components/mutual_from/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-mutual-from"
+name = "offset-mutual-from"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
