--- a/components/route/Cargo.toml
+++ b/components/route/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-route"
+name = "offset-route"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
@@ -7,9 +7,9 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
-proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
-crypto = { path = "../crypto", version = "0.1.0" , package = "offst-crypto" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
+proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
+crypto = { path = "../crypto", version = "0.1.0" , package = "offset-crypto" }
 
 
 num-bigint = "0.2.2"
