--- a/components/test/Cargo.toml
+++ b/components/test/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-test"
+name = "offset-test"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "AGPL-3.0"
@@ -7,23 +7,23 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
-funder = { path = "../funder", version = "0.1.0", package = "offst-funder" }
-crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
-identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
-timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
-proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
-relay = { path = "../relay", version = "0.1.0" , package = "offst-relay" }
-net = { path = "../net", version = "0.1.0" , package = "offst-net" }
-index_server = { path = "../index_server", version = "0.1.0" , package = "offst-index-server" }
-node = { path = "../node", version = "0.1.0" , package = "offst-node" }
-database = { path = "../database", version = "0.1.0" , package = "offst-database" }
-bin = { path = "../bin", version = "0.1.0" , package = "offst-bin" }
-stctrl = { path = "../stctrl", version = "0.1.0" , package = "offst-stctrl" }
-stcompact = { path = "../stcompact", version = "0.1.0" , package = "offst-stcompact" }
-app = { path = "../app", version = "0.1.0" , package = "offst-app" }
-app_client = { path = "../app_client", version = "0.1.0" , package = "offst-app-client" }
-connection = { path = "../connection", version = "0.1.0" , package = "offst-connection" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
+funder = { path = "../funder", version = "0.1.0", package = "offset-funder" }
+crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
+identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
+timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
+proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
+relay = { path = "../relay", version = "0.1.0" , package = "offset-relay" }
+net = { path = "../net", version = "0.1.0" , package = "offset-net" }
+index_server = { path = "../index_server", version = "0.1.0" , package = "offset-index-server" }
+node = { path = "../node", version = "0.1.0" , package = "offset-node" }
+database = { path = "../database", version = "0.1.0" , package = "offset-database" }
+bin = { path = "../bin", version = "0.1.0" , package = "offset-bin" }
+stctrl = { path = "../stctrl", version = "0.1.0" , package = "offset-stctrl" }
+stcompact = { path = "../stcompact", version = "0.1.0" , package = "offset-stcompact" }
+app = { path = "../app", version = "0.1.0" , package = "offset-app" }
+app_client = { path = "../app_client", version = "0.1.0" , package = "offset-app-client" }
+connection = { path = "../connection", version = "0.1.0" , package = "offset-connection" }
 
 futures = "0.3.1"
 
