--- a/components/version/Cargo.toml
+++ b/components/version/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "offst-version"
+name = "offset-version"
 version = "0.1.0"
 authors = ["real <real@freedomlayer.org>"]
 license = "MIT OR Apache-2.0"
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 
-common = { path = "../common", version = "0.1.0", package = "offst-common" }
+common = { path = "../common", version = "0.1.0", package = "offset-common" }
 
 log = "0.4"
 futures = "0.3.1"
