--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ cache:
     - $HOME/.cargo
     - $HOME/install
     # Android SDK
-    - $HOME/android-sdk-dl
-    - $HOME/android-sdk
+    # - $HOME/android-sdk-dl
+    # - $HOME/android-sdk
 
 matrix:
   fast_finish: true
@@ -86,11 +86,13 @@ matrix:
       # Get revision number from https://dl.google.com/android/repository/repository2-1.xml
       # Look for the string 'sdk-tools-linux-'.
       - ANDROID_SDK_VERSION=4333796
+      - ANDROID_VERSION=26
     before_install:
       - >
         export ANDROID_HOME="${HOME}/android-sdk";
-        export PATH=$PATH:"${ANDROID_HOME}/tools/bin";
-        mkdir -p $ANDROID_HOME
+        # mkdir -p $ANDROID_HOME;
+        export ANDROID_NDK_HOME="${ANDROID_HOME}/ndk-bundle";
+        export PATH=$PATH:"${ANDROID_HOME}/tools/bin:${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin";
 
     install:
       # Download and unzip the Android SDK tools (if not already there thanks to the cache mechanism)
@@ -105,13 +107,21 @@ matrix:
       # https://stackoverflow.com/questions/43433542/stuck-at-android-repositories-cfg-could-not-be-loaded
       - mkdir -p .android && touch ~/.android/repositories.cfg
       # Install or update Android SDK components (will not do anything if already up to date thanks to the cache mechanism)
-      - echo y | $ANDROID_HOME/tools/bin/sdkmanager 'platforms;android-29' 'build-tools;29.0.0' 'ndk-bundle' > /dev/null
+      - echo y | $ANDROID_HOME/tools/bin/sdkmanager 'platforms;android-${ANDROID_VERSION}' 'build-tools;${ANDROID_VERSION}.0.0' 'ndk-bundle' > /dev/null
       # Add rust targets:
       - rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android
 
-      - > 
-        export ANDROID_NDK_HOME="${ANDROID_HOME}/ndk-bundle"
-        cat travis/cargo_config_template | envsubst > $HOME/.cargo/config
+      # Create ~/.cargo/config (from template):
+      - cat travis/cargo_config_template | envsubst > $HOME/.cargo/config
+
+      # Add symlinks for clang compilers:
+      - >
+        ln -s "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android${ANDROID_VERSION}-clang" 
+                "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android-clang" &&
+        ln -s "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi${ANDROID_VERSION}-clang" 
+                "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/arm-linux-androideabi-clang" &&
+        ln -s "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android${ANDROID_VERSION}-clang"
+                "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android-clang" &&
 
     script:
       - cargo build --target aarch64-linux-android
